fixed stuck footer that was at the top of the page so it is at the bottom

--- a/BoardGameLogger/wwwroot/css/site.css
+++ b/BoardGameLogger/wwwroot/css/site.css
@@ -20,3 +20,23 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+/* 1. Force the whole page to be at least screen-height */
+html {
+    min-height: 100%;
+    position: relative;
+}
+
+body {
+    /* Margin bottom should be the same height as your footer */
+    margin-bottom: 60px;
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px; /* Force a consistent height */
+    line-height: 60px; /* Center text vertically */
+    background-color: white;
+}
